# Pathfinder-RW

./: .env.example  .gitignore  Cargo.toml  Pathfinder-RW.code-workspace  README.md  TODO.txt  diesel.toml  ex.txt  readme.md
OLD_CODE/diesel/: Cargo.toml  README.md
OLD_CODE/diesel/src/: lib.rs  schema.rs
OLD_CODE/middleware/src/: lib.rs
api/: Cargo.toml  classes.xml  ex.txt  message.xsl  readme.md
api/migrations/2023-02-11-201629_create_tables/: down.sql  up.sql
api/src/: main.rs  schema.rs
api/src/handlers/: catalog.rs  components.rs  degrees.rs  dev.rs  gpt_generated_graph.rs  schedule.rs  schedule.rs.old  subdivisions.rs  types.rs  universities.rs
api/src/models/: associations.rs  degree.rs
diesel/: Cargo.toml  README.md
diesel/migrations/2023-02-07-221506_init_db/: down.sql  up.sql
diesel/src/: dev.rs  lib.rs  models.rs  schema.rs
diesel/src/crud/: mod.rs
diesel_demo/: Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend-old/public/: index.html
frontend-old/src/: App.js  index.js
frontend-old/src/config/: theme.tsx
frontend-old/src/pages/: index.tsx
frontend-old/src/styles/: globals.css
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/: index.js
middleware/: Cargo.toml  README.md
middleware/src/: lib.rs
migrations/2023-02-07-221506_init_db/: down.sql  up.sql
migrations/2023-02-11-201629_create_tables/: down.sql  up.sql
src/: db_connection.rs  lib.rs  main.rs  models.rs  schema.rs
src/handlers/: catalog.rs  catalog_maker.rs  components.rs  degrees.rs  dev.rs  gpt_generated_graph.rs  mod.rs  schedule.rs  subdivisions.rs  types.rs  universities.rs
src/models/: associations.rs  class.rs  component.rs  degree.rs  mod.rs  subdivision.rs  university.rs
(+11 files in other folders)
