[package]
name = "pathfinder_rw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
dotenv = "0.9.0"
actix-web = "4.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.10.0"