[package]
name = "pathfinder_rw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
dotenv = "0.9"
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
env_logger = "0.10"
thiserror = "1.0"
strum = "0.24"
strum_macros = "0.24"
derive_more = "0.99.17"

[profile.release]
strip = true
lto = "fat"
